# rust-derive-builder

./: fork-alterations
derive_builder/: Cargo.toml
derive_builder/examples/: channel.rs  custom_constructor.rs  custom_defaults.rs  custom_error.rs  custom_error_generic.rs  deny_missing_docs.rs  doc_example.rs  readme_example.rs  validation.rs
derive_builder/src/: lib.rs
derive_builder/tests/: bounds_generation.rs  build_fn.rs  builder_field_custom.rs  builder_name.rs  custom_constructor.rs  custom_default.rs  derive_trait.rs  forward_allow_attr.rs  forward_serde_attrs.rs  generic_structs.rs  generic_with_default.rs  lifetime.rs  setter_custom.rs  setter_extend.rs  setter_into.rs  setter_name.rs  setter_pattern.rs  setter_prefix.rs  setter_strip_option.rs  setter_visibility.rs  skip-setter.rs  sub_builder.rs  try_setter.rs  validation.rs  wombat.rs
derive_builder/tests/compile-fail/: builder_field_attr.rs  builder_field_attr.stderr
derive_builder_core/: Cargo.toml
derive_builder_core/src/: builder.rs  builder_field.rs
derive_builder_core/src/macro_options/: darling_opts.rs
derive_builder_macro/: Cargo.toml
derive_builder_no_std_tests/: Cargo.toml
