[package]
name = "derive_builder_macro_fork_arti"
version = "0.11.2"
authors = ["Ian Jackson <iwj@torproject.org>",
           "Colin Kiegel <kiegel@gmx.de>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Jan-Erik Rediger <janerik@fnordig.de>",
           "Ted Driggs <ted.driggs@outlook.com>"]

description = "Rust macro to automatically implement the builder pattern for arbitrary structs."
repository = "https://github.com/ijackson/rust-derive-builder"
documentation = "https://docs.rs/derive_builder_macro_fork_arti/0.11.2"

license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
keywords = ["derive", "macro", "builder", "setter", "struct"]
readme = "README.md"

[lib]
proc-macro = true

[features]
clippy = ["derive_builder_core/clippy"]

[dependencies]
syn = { version = "1.0.91", features = ["full", "extra-traits"] }
derive_builder_core = { version = "=0.11.2", path = "../derive_builder_core", package = "derive_builder_core_fork_arti" }
