[package]
name = "derive_builder_no_std_tests_fork_arti"
version = "0.1.0"
authors = ["Ian Jackson <iwj@torproject.org>",
           "Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"
publish = false

[features]
clippy = ["derive_builder/clippy"]

[dependencies]
derive_builder = { path = "../derive_builder", default-features = false, package = "derive_builder_fork_arti" }
